@@ -1,3 +1,3 @@
 version=0.4.0
-build=175
-date=2012-06-12
+build=177
+date=2012-06-16
