@@ -1,8 +1,12 @@
 TODO: 
  * Process times and similar ?
  * Fix configuration GUI (low priority)
- * Fixa dependonservice LanManWorkStation (old win)
+ * Fix dependonservice LanManWorkStation (old win)
  * Fix RtlStringFromGUID problem on NT4
+
+2012-06-12 MickeM
+ * Improved error handling in performance counters #436
+ * Improved parsing of "legacy command lines"
 
 2012-06-12 MickeM
  * Added log level = off to disable logging.
